welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: type mismatch;
 found   : String
 required: Boolean
while (litMessage())
                 ^BDRBuggle:5: error: not found: value lm
if (lm=="R") 
    ^BDRBuggle:7: error: not found: value lm
if (lm=="L")
    ^BDRBuggle:9: error: not found: value lm
if (lm=="I")
    ^BDRBuggle:11: error: not found: value lm
if (lm=="A")
    ^BDRBuggle:13: error: not found: value lm
if (lm=="B")
    ^BDRBuggle:15: error: not found: value lm
if (lm=="C")
    ^BDRBuggle:17: error: not found: value lm
if (lm=="Z")
    ^BDRBuggle:19: error: not found: value lm
if (lm=="Y")
    ^BDRBuggle:21: error: not found: value lm
if (lm=="X")
    ^